JDK 11: fix ObjectiveCHeaderGeneratorTest.testNativeSuperInterfaceTranslation.
	Change on 2019/02/08 by antoniocortes <antoniocortes@google.com>

-------------
Created by MOE: https://github.com/google/moe
MOE_MIGRATED_REVID=233107751